5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1616_2940.log
== TEST (2019-04-01 14:08:40) 
-- CODE:
vf = vi((1 + j)**n)
vi = float(input ("valor emprestado:"))
j = float(input ("juros:"))
n = float(input("meses:"))
print (round(vf,2)

-- ERROR:
File "XXXX", line 6
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:05) 
-- CODE:
vf = vi((1 + j)**n)
vi = float(input ("valor emprestado:"))
j = float(input ("juros:"))
n = float(input("meses:"))
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = vi((1 + j)**n)
NameError: name 'vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:33) 
-- CODE:
from math import *
vi = float(input ("valor emprestado:"))
j = float(input ("juros:"))
n = float(input("meses:"))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf = vi((1 + j)**n)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:12:05) 
-- CODE:
from math import *
vi = (input ("valor emprestado:"))
j = (input ("juros:"))
n = (input("meses:"))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf = vi((1 + j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:22) 
-- CODE:
from math import *
vi = int(input ("valor emprestado:"))
j = int(input ("juros:"))
n = int(input("meses:"))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    j = int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:22) 
-- CODE:
from math import *
vi = (int(input ("valor emprestado:")))
j = (float(input ("juros:")))
n = (int(input("meses:")))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf = vi((1 + j)**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:52) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:")))
j = (float(input ("juros:")))
n = (float(input("meses:")))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf = vi((1 + j)**n)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:42) 
-- CODE:
from math import *
vi = (input ("valor emprestado:")))
j = (input ("juros:")))
n = (input("meses:")))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
File "XXXX", line 2
    vi = (input()))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:23) 
-- CODE:
from math import *
vi = (input ("valor emprestado:"))
j = (input ("juros:"))
n = (input("meses:"))
vf = vi((1 + j)**n)
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vf = vi((1 + j)**n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:44) 
-- CODE:
from math import *
vi = (input ("valor emprestado:"))
j = (float(input ("juros:"))
n = (input("meses:"))
vf = vi (1 + j) ** n
print (round(vf,2))
-- ERROR:
File "XXXX", line 4
    n = (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:22) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:"))
j = (float(input ("juros:"))
n = (float(input("meses:"))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- ERROR:
File "XXXX", line 3
    j = (float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:35) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:"))
j = (int(input ("juros:"))
n = (float(input("meses:"))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- ERROR:
File "XXXX", line 3
    j = (int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:19) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:"))
j = (int(input("juros do emprestimo:")))
n = (float(input("meses:"))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- ERROR:
File "XXXX", line 3
    j = (int(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:24) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:")))
j = (int(input("juros do emprestimo:")))
n = (float(input("meses:")))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    j = (int(input()))
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:10) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:")))
j = float(input("juros do emprestimo:"))
n = (float(input("meses:")))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- OUTPUT:
24798.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:42:25) 
-- CODE:
from math import *
vi = (float(input ("valor emprestado:")))
j = float(input("juros do emprestimo:"))
n = (float(input("meses:")))
vf = vi *(1 + j) ** n
print (round(vf,2))
-- EXECUTION TIME:
0.13528
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
24798.08
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
13322.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
